Feature Engineering assignment

--- a/Feature-Engineering/Feature_Engineering.ipynb
+++ b/Feature-Engineering/Feature_Engineering.ipynb
@@ -7,23 +7,23 @@
     "-----------------------------------------------------------------\n",
     "\n",
     "Q1. What is a parameter?  \n",
-    "- A parameter is a variable used in a model to represent a certain characteristic or feature of the data. For example, in a linear regression model, the slope and intercept are parameters. Parameters are learned from the training data and are used to make predictions on new data.\n",
+    "- **A parameter** is a variable used in a model to represent a certain characteristic or feature of the data. For example, in a linear regression model, the slope and intercept are parameters. Parameters are learned from the training data and are used to make predictions on new data.\n",
     "\n",
     "-----------------------------------------------------------------\n",
     "\n",
     "Q2. What is correlation?  \n",
-    "- Correlation is a statistical measure that describes the extent to which two variables change together. It ranges from -1 to 1, where 1 indicates a perfect positive correlation, -1 indicates a perfect negative correlation, and 0 indicates no correlation. \n",
+    "- **Correlation** is a statistical measure that describes the extent to which two variables change together. It ranges from `-1 to 1` , where `1 indicates a perfect positive correlation` , `-1 indicates a perfect negative correlation` , and `0 indicates no correlation` . \n",
     "- **For example** , height and weight are often correlated because taller people tend to weigh more.\n",
     "\n",
     "-----------------------------------------------------------------\n",
     "\n",
     "Q3. What does negative correlation mean?  \n",
-    "- Negative correlation means that as one variable increases, the other variable decreases. For example, the number of hours spent watching TV and grades in school might have a negative correlation, meaning that as TV watching increases, grades tend to decrease.\n",
+    "- **Negative correlation** means that as one variable increases, the other variable decreases. For example, the number of hours spent watching TV and grades in school might have a negative correlation, meaning that as TV watching increases, grades tend to decrease.\n",
     "\n",
     "-----------------------------------------------------------------\n",
     "\n",
     "Q4. Define Machine Learning. What are the main components in Machine Learning?  \n",
-    "- Machine Learning is a field of artificial intelligence that uses statistical techniques to give computer systems the ability to learn from data and make decisions or predictions. \n",
+    "- **Machine Learning** is a field of artificial intelligence that uses statistical techniques to give computer systems the ability to learn from data and make decisions or predictions. \n",
     "- **The main components are:**\n",
     "  1. **Data:** The raw information used to train the model.\n",
     "  2. **Model:** The mathematical representation of the data.\n",
@@ -38,7 +38,10 @@
     "-----------------------------------------------------------------\n",
     "\n",
     "Q6. What are continuous and categorical variables?  \n",
-    "- Continuous variables can take any value within a range and are often measured. Examples include height, weight, and temperature. Categorical variables represent discrete categories or groups and are often counted. Examples include gender, color, and type of vehicle.\n",
+    "- **Continuous variables** can take any value within a range and are often measured. \n",
+    "- **Examples include** height, weight, and temperature. \n",
+    "- **Categorical variables** represent discrete categories or groups and are often counted. \n",
+    "- **Examples include** gender, color, and type of vehicle.\n",
     "\n",
     "-----------------------------------------------------------------\n",
     "\n",
@@ -52,17 +55,18 @@
     "-----------------------------------------------------------------\n",
     "\n",
     "Q8. What do you mean by training and testing a dataset?  \n",
-    "- Training a dataset involves using it to fit a model, meaning the model learns from the data. Testing a dataset involves using it to evaluate the model's performance, meaning the model makes predictions on new, unseen data to assess how well it generalizes.\n",
+    "- **Training a dataset** involves using it to fit a model, meaning the model learns from the data. \n",
+    "- **Testing a dataset** involves using it to evaluate the model's performance, meaning the model makes predictions on new, unseen data to assess how well it generalizes.\n",
     "\n",
     "-----------------------------------------------------------------\n",
     "\n",
     "Q9. What is sklearn.preprocessing?  \n",
-    "- sklearn.preprocessing is a module in scikit-learn that provides functions and classes to preprocess data before training a model. It includes techniques for scaling, encoding, and normalizing data, which are essential steps to ensure that the data is in the right format for machine learning algorithms.\n",
+    "- **sklearn.preprocessing** is a module in scikit-learn that provides functions and classes to preprocess data before training a model. It includes techniques for scaling, encoding, and normalizing data, which are essential steps to ensure that the data is in the right format for machine learning algorithms.\n",
     "\n",
     "-----------------------------------------------------------------\n",
     "\n",
     "Q10. What is a Test set?  \n",
-    "- A test set is a subset of the dataset used to evaluate the performance of a trained model. It is not used during the training process, ensuring that the evaluation is unbiased and reflects the model's ability to generalize to new data.\n",
+    "- **A test set** is a subset of the dataset used to evaluate the performance of a trained model. It is not used during the training process, ensuring that the evaluation is unbiased and reflects the model's ability to generalize to new data.\n",
     "\n",
     "-----------------------------------------------------------------\n",
     "\n",
