linear regression and evaluation metrics assignment

--- a/Evaluation-Metrics-and-Regression-Implementation/Linear_regression_and_evaluation_metrics.ipynb
+++ b/Evaluation-Metrics-and-Regression-Implementation/Linear_regression_and_evaluation_metrics.ipynb
@@ -122,9 +122,9 @@
     "-----------------------------------------------------------------\n",
     "\n",
     "Q14. How can we address multicollinearity in regression?  \n",
-    "Q16. How is Adjusted R-squared calculated?  \n",
-    "- Adjusted R-squared is calculated as:  \n",
-    "**Example:** Dropping one of the correlated predictors can reduce multicollinearity. For instance, if `X1` and `X2` are highly correlated, you can drop `X2` from the model. Alternatively, you can use PCA to transform the predictors into a set of uncorrelated components. Regularization techniques like Ridge and Lasso regression add a penalty to the model coefficients, reducing the impact of multicollinearity.  \n",
+    "- We can address multicollinearity by removing highly correlated predictors, using principal component analysis (PCA), or regularization techniques like Ridge or Lasso regression.  \n",
+    "\n",
+    "**Example:** Dropping one of the correlated predictors can reduce multicollinearity.  \n",
     "\n",
     "-----------------------------------------------------------------\n",
     "\n",
