--- a/Logistic-Regression/Logistic_Regression.ipynb
+++ b/Logistic-Regression/Logistic_Regression.ipynb
@@ -652,19 +652,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_18932\\3880313361.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;31m# Load the Wine dataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"titanic.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;31m# Split the dataset into training and testing sets\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\ACER\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6295\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6296\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6297\u001b[0m         \u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6298\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6299\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'data'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 100 candidates, totalling 500 fits\n",
+      "Best Parameters: {'solver': 'saga', 'penalty': 'l2', 'C': np.float64(0.046415888336127774)}\n",
+      "Best Cross-Validation Score: 0.7977\n",
+      "Test Set Accuracy: 0.7989\n"
      ]
     }
    ],
@@ -679,39 +677,66 @@
     "'''\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.datasets import load_wine\n",
     "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# Load the Wine dataset\n",
-    "data = pd.read_csv(\"titanic.csv\")\n",
-    "X = data.data\n",
-    "y = data.target\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('titanic.csv')\n",
+    "\n",
+    "# Preprocessing\n",
+    "# Fill missing values for 'Age' with the median\n",
+    "df['Age'] = df['Age'].fillna(df['Age'].median())\n",
+    "\n",
+    "# Drop columns that are not needed for the model\n",
+    "df.drop(['Name', 'Ticket', 'Cabin', 'Embarked'], axis=1, inplace=True)\n",
+    "\n",
+    "# Convert categorical 'Sex' to numerical\n",
+    "df['Sex'] = df['Sex'].map({'male': 0, 'female': 1})\n",
+    "\n",
+    "# Define features and target variable\n",
+    "X = df[['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare']]\n",
+    "y = df['Survived']\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Define the parameter grid\n",
-    "param_grid = {\n",
-    "    'C': [0.1, 1, 10, 100],\n",
-    "    'penalty': ['l1', 'l2'],\n",
-    "    'solver': ['liblinear', 'saga']\n",
+    "# Feature scaling\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "# Create a Logistic Regression model\n",
+    "model = LogisticRegression()\n",
+    "\n",
+    "# Define the parameter grid for RandomizedSearchCV\n",
+    "param_dist = {\n",
+    "    'C': np.logspace(-4, 4, 40),  # Increased number of values for C\n",
+    "    'penalty': ['l1', 'l2'],       # Regularization type\n",
+    "    'solver': ['liblinear', 'saga']  # Solvers that support l1 and l2 penalties\n",
     "}\n",
     "\n",
-    "# Apply RandomizedSearchCV to tune the hyperparameters\n",
-    "random_search = RandomizedSearchCV(LogisticRegression(), param_grid, n_iter=10, cv=5, scoring='accuracy', random_state=42)\n",
+    "# Create RandomizedSearchCV object\n",
+    "random_search = RandomizedSearchCV(estimator=model, param_distributions=param_dist,\n",
+    "                                   n_iter=100, cv=5, verbose=1, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "# Fit RandomizedSearchCV\n",
     "random_search.fit(X_train, y_train)\n",
     "\n",
-    "# Print the best parameters and accuracy\n",
-    "print(f'Best Parameters: {random_search.best_params_}')\n",
-    "print(f'Best Cross-Validation Accuracy: {random_search.best_score_:.2f}')\n",
+    "# Get the best parameters and best score\n",
+    "best_params = random_search.best_params_\n",
+    "best_score = random_search.best_score_\n",
     "\n",
-    "# Evaluate the model on the test set\n",
+    "# Evaluate the model with the best parameters on the test set\n",
     "best_model = random_search.best_estimator_\n",
     "y_pred = best_model.predict(X_test)\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f'Test Set Accuracy: {accuracy:.2f}')"
+    "test_accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "# Print the results\n",
+    "print(f'Best Parameters: {best_params}')\n",
+    "print(f'Best Cross-Validation Score: {best_score:.4f}')\n",
+    "print(f'Test Set Accuracy: {test_accuracy:.4f}')"
    ]
   },
   {
