--- a/Logistic-Regression/Logistic_Regression.ipynb
+++ b/Logistic-Regression/Logistic_Regression.ipynb
@@ -506,8 +506,8 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# Load the dataset from a CSV file\n",
-    "data = pd.read_csv('Titanic_train.csv')  # Replace 'Titanic_train.csv' with the actual file name\n",
+    "# Load the dataset\n",
+    "data = pd.read_csv('Titanic_train.csv')\n",
     "\n",
     "# Drop columns that are not needed\n",
     "data = data.drop(columns=['Name', 'Ticket', 'Cabin'])\n",
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,6 @@
     "df = pd.read_csv('titanic.csv')\n",
     "\n",
     "# Preprocessing\n",
-    "# Fill missing values for 'Age' with the median\n",
     "df['Age'] = df['Age'].fillna(df['Age'].median())\n",
     "\n",
     "# Drop columns that are not needed for the model\n",
