Logistic Regression Assignment

--- a/Logistic-Regression/Logistic_Regression.ipynb
+++ b/Logistic-Regression/Logistic_Regression.ipynb
@@ -11,161 +11,163 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logistic Regression Assignment  \n",
+    "# Logistic Regression Assignment\n",
     "\n",
-    "### Q1. What is Logistic Regression, and how does it differ from Linear Regression?  \n",
-    "Logistic Regression is a statistical method used for binary classification tasks. It predicts the probability that a given input belongs to a particular class (0 or 1). Unlike Linear Regression, which predicts continuous values, Logistic Regression applies the **sigmoid function** to map predicted values between 0 and 1.\n",
+    "## Q1. What is Logistic Regression, and how does it differ from Linear Regression?\n",
     "\n",
-    "| Feature | Linear Regression | Logistic Regression |\n",
-    "|---------|------------------|---------------------|\n",
-    "| Output | Continuous | Probability (0 to 1) |\n",
-    "| Function | Linear Equation | Sigmoid Function |\n",
-    "| Use Case | Regression | Classification |\n",
+    "**Logistic Regression** is a statistical method used for binary classification problems. It predicts the probability of an outcome belonging to a particular category, typically represented as 0 or 1.\n",
     "\n",
-    "---\n",
+    "### Differences from Linear Regression:\n",
+    "1. **Output Type**: \n",
+    "   - Linear Regression predicts continuous values.\n",
+    "   - Logistic Regression predicts probabilities and classifies data into discrete categories (0 or 1).\n",
+    "2. **Function Used**:\n",
+    "   - Linear Regression uses a linear function: \\( y = \\beta_0 + \\beta_1x \\)\n",
+    "   - Logistic Regression applies a **Sigmoid function** to convert the output into a probability.\n",
+    "3. **Interpretation**:\n",
+    "   - Linear Regression finds the best fit line.\n",
+    "   - Logistic Regression finds a decision boundary to separate classes.\n",
     "\n",
-    "### Q2. What is the mathematical equation of Logistic Regression?  \n",
-    "The equation for Logistic Regression is:\n",
+    "## Q2. What is the mathematical equation of Logistic Regression?\n",
     "\n",
-    "\\[ P(Y=1|X) = \\frac{1}{1 + e^{-(\\beta_0 + \\beta_1 X_1 + \\beta_2 X_2 + ... + \\beta_n X_n)}} \\]\n",
+    "The equation of Logistic Regression is:\n",
     "\n",
-    "where:\n",
-    "- \\( P(Y=1|X) \\) is the probability of the positive class.\n",
-    "- \\( \\beta_0, \\beta_1, ..., \\beta_n \\) are the regression coefficients.\n",
-    "- \\( X_1, X_2, ..., X_n \\) are the input features.\n",
+    "\\[\n",
+    "P(Y=1 | X) = \\frac{1}{1 + e^{- (\\beta_0 + \\beta_1X)}}\n",
+    "\\]\n",
     "\n",
-    "---\n",
+    "Where:\n",
+    "- \\( P(Y=1 | X) \\) is the probability that output is 1.\n",
+    "- \\( \\beta_0, \\beta_1 \\) are the model coefficients.\n",
+    "- \\( X \\) is the input variable.\n",
+    "- The **Sigmoid function** is used to map the output between 0 and 1.\n",
     "\n",
-    "### Q3. Why do we use the Sigmoid function in Logistic Regression?  \n",
-    "The Sigmoid function ensures that the output values are between 0 and 1, making them interpretable as probabilities. It is given by:\n",
+    "## Q3. Why do we use the Sigmoid function in Logistic Regression?\n",
     "\n",
-    "\\[ \\sigma(z) = \\frac{1}{1 + e^{-z}} \\]\n",
+    "The **Sigmoid function** converts any real-valued number into a probability between 0 and 1:\n",
     "\n",
-    "where \\( z = \\beta_0 + \\beta_1 X_1 + ... + \\beta_n X_n \\).\n",
+    "\\[\n",
+    "sigmoid(z) = \\frac{1}{1 + e^{-z}}\n",
+    "\\]\n",
     "\n",
-    "---\n",
+    "### Reasons for using Sigmoid:\n",
+    "1. **Probability Interpretation**: The output is always between 0 and 1, making it suitable for classification.\n",
+    "2. **Non-linearity**: Helps model complex relationships.\n",
+    "3. **Decision Boundary**: Classifies data based on a probability threshold (e.g., 0.5).\n",
     "\n",
-    "### Q4. What is the cost function of Logistic Regression?  \n",
-    "The cost function used is **Log Loss (Binary Cross-Entropy)**:\n",
+    "## Q4. What is the cost function of Logistic Regression?\n",
     "\n",
-    "\\[ J(\\beta) = - \\frac{1}{m} \\sum_{i=1}^{m} \\left[ y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i) \\right] \\]\n",
+    "The **log loss function (Binary Cross-Entropy Loss)** is used:\n",
     "\n",
-    "This function penalizes incorrect classifications and optimizes the model using gradient descent.\n",
+    "\\[\n",
+    "J(\\theta) = - \\frac{1}{m} \\sum_{i=1}^{m} \\left[ y_i \\log(h_\\theta(x_i)) + (1 - y_i) \\log(1 - h_\\theta(x_i)) \\right]\n",
+    "\\]\n",
     "\n",
-    "---\n",
+    "Where:\n",
+    "- \\( y_i \\) is the actual label (0 or 1).\n",
+    "- \\( h_\\theta(x_i) \\) is the predicted probability.\n",
+    "- \\( m \\) is the number of observations.\n",
     "\n",
-    "### Q5. What is Regularization in Logistic Regression? Why is it needed?  \n",
-    "Regularization prevents overfitting by adding a penalty term to the cost function:\n",
-    "- **L1 Regularization (Lasso)**: Adds absolute weights \\( |\\beta| \\), leading to sparsity.\n",
-    "- **L2 Regularization (Ridge)**: Adds squared weights \\( \\beta^2 \\), reducing model complexity.\n",
+    "This function penalizes incorrect predictions, ensuring that the model minimizes error.\n",
     "\n",
-    "---\n",
+    "## Q5. What is Regularization in Logistic Regression? Why is it needed?\n",
     "\n",
-    "### Q6. Explain the difference between Lasso, Ridge, and Elastic Net regression.  \n",
-    "- **Lasso Regression (L1)**: Shrinks some coefficients to zero, performing feature selection.\n",
-    "- **Ridge Regression (L2)**: Shrinks coefficients but doesn’t eliminate features.\n",
-    "- **Elastic Net**: Combination of both Lasso and Ridge.\n",
+    "**Regularization** is used to prevent overfitting by adding a penalty term to the cost function.\n",
     "\n",
-    "---\n",
+    "### Types of Regularization:\n",
+    "1. **L1 Regularization (Lasso)**: Adds the absolute value of coefficients.\n",
+    "2. **L2 Regularization (Ridge)**: Adds the squared value of coefficients.\n",
     "\n",
-    "### Q7. When should we use Elastic Net instead of Lasso or Ridge?  \n",
-    "Use **Elastic Net** when:\n",
-    "- Features are highly correlated.\n",
-    "- Lasso leads to underperformance due to selecting too few features.\n",
+    "### Why is it needed?\n",
+    "- Prevents the model from memorizing noise.\n",
+    "- Reduces model complexity.\n",
+    "- Improves generalization on unseen data.\n",
     "\n",
-    "---\n",
+    "## Q6. Explain the difference between Lasso, Ridge, and Elastic Net regression.\n",
     "\n",
-    "### Q8. What is the impact of the regularization parameter (λ) in Logistic Regression?  \n",
-    "- **High λ**: More regularization → simpler model.\n",
-    "- **Low λ**: Less regularization → more complex model.\n",
+    "| Regularization | Penalty Term | Effect |\n",
+    "|--------------|-------------|--------|\n",
+    "| **Lasso (L1)** | \\( \\lambda \\sum |\\beta_i| \\) | Shrinks some coefficients to zero, useful for feature selection. |\n",
+    "| **Ridge (L2)** | \\( \\lambda \\sum \\beta_i^2 \\) | Reduces coefficient values but doesn’t make them zero. |\n",
+    "| **Elastic Net** | \\( \\lambda_1 \\sum |\\beta_i| + \\lambda_2 \\sum \\beta_i^2 \\) | A mix of L1 and L2 regularization. |\n",
     "\n",
-    "---\n",
+    "## Q7. When should we use Elastic Net instead of Lasso or Ridge?\n",
     "\n",
-    "### Q9. What are the key assumptions of Logistic Regression?  \n",
-    "1. **Linear relationship between features and log-odds.**\n",
-    "2. **No multicollinearity** among independent variables.\n",
-    "3. **Large sample size** for better estimates.\n",
+    "Elastic Net is preferred when:\n",
+    "1. **There are correlated features** – Lasso may randomly select one and ignore others, while Elastic Net keeps them together.\n",
+    "2. **Lasso selects too few features** – Elastic Net balances selection and shrinkage.\n",
     "\n",
-    "---\n",
+    "## Q8. What is the impact of the regularization parameter (λ) in Logistic Regression?\n",
     "\n",
-    "### Q10. What are some alternatives to Logistic Regression for classification tasks?  \n",
+    "- **Higher λ** → More regularization → Smaller coefficients → Simpler model.\n",
+    "- **Lower λ** → Less regularization → More complex model.\n",
+    "- **Too high λ** → Underfitting.\n",
+    "- **Too low λ** → Overfitting.\n",
+    "\n",
+    "## Q9. What are the key assumptions of Logistic Regression?\n",
+    "1. **Independent observations** – No multicollinearity among predictors.\n",
+    "2. **Linearity in log-odds** – Relationship between features and log-odds is linear.\n",
+    "3. **No missing values** – Data should be complete.\n",
+    "\n",
+    "## Q10. What are some alternatives to Logistic Regression for classification tasks?\n",
     "- Decision Trees\n",
     "- Random Forest\n",
     "- Support Vector Machines (SVM)\n",
     "- Neural Networks\n",
+    "- Naïve Bayes\n",
     "\n",
-    "---\n",
+    "## Q11. What are Classification Evaluation Metrics?\n",
+    "1. **Accuracy**\n",
+    "2. **Precision, Recall, F1-score**\n",
+    "3. **ROC-AUC Curve**\n",
+    "4. **Confusion Matrix**\n",
     "\n",
-    "### Q11. What are Classification Evaluation Metrics?  \n",
-    "- Accuracy\n",
-    "- Precision\n",
-    "- Recall\n",
-    "- F1-score\n",
-    "- ROC-AUC Curve\n",
+    "## Q12. How does class imbalance affect Logistic Regression?\n",
+    "- Leads to biased predictions towards the majority class.\n",
+    "- Solutions: **SMOTE, Class weights adjustment, Threshold tuning**.\n",
     "\n",
-    "---\n",
+    "## Q13. What is Hyperparameter Tuning in Logistic Regression?\n",
+    "- Adjusting parameters like **regularization strength (λ)** and **solver** to improve performance.\n",
+    "- Done using **GridSearchCV** or **RandomizedSearchCV**.\n",
     "\n",
-    "### Q12. How does class imbalance affect Logistic Regression?  \n",
-    "- Causes biased predictions.\n",
-    "- Solutions:\n",
-    "  - Use class weights\n",
-    "  - Resampling (oversampling/undersampling)\n",
+    "## Q14. What are different solvers in Logistic Regression? Which one should be used?\n",
+    "| Solver | Type | When to Use |\n",
+    "|--------|------|------------|\n",
+    "| **lbfgs** | Quasi-Newton | Best for small datasets |\n",
+    "| **liblinear** | Coordinate Descent | Good for L1 regularization |\n",
+    "| **saga** | Stochastic Gradient Descent | Large datasets |\n",
+    "| **newton-cg** | Newton’s Method | L2 regularization |\n",
     "\n",
-    "---\n",
+    "## Q15. How is Logistic Regression extended for multiclass classification?\n",
+    "- **One-vs-Rest (OvR)** – Trains one model per class.\n",
+    "- **Softmax Regression (Multinomial)** – Generalizes Logistic Regression for multiple classes.\n",
     "\n",
-    "### Q13. What is Hyperparameter Tuning in Logistic Regression?  \n",
-    "Tuning parameters like **C (inverse of λ)**, solver type, and class weight using Grid Search or Random Search.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Q14. What are different solvers in Logistic Regression? Which one should be used?  \n",
-    "- **liblinear**: Small datasets.\n",
-    "- **lbfgs, sag, saga**: Large datasets.\n",
-    "- **newton-cg**: Best for high-dimensional data.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Q15. How is Logistic Regression extended for multiclass classification?  \n",
-    "Using **One-vs-Rest (OvR)** or **Softmax Regression (Multinomial Logistic Regression)**.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Q16. What are the advantages and disadvantages of Logistic Regression?  \n",
+    "## Q16. Advantages and Disadvantages of Logistic Regression\n",
     "**Advantages:**\n",
     "- Simple and interpretable.\n",
     "- Works well for small datasets.\n",
     "\n",
     "**Disadvantages:**\n",
-    "- Cannot capture complex relationships.\n",
-    "- Assumes linear separation in log-odds.\n",
+    "- Assumes linear relationship in log-odds.\n",
+    "- Struggles with non-linearly separable data.\n",
     "\n",
-    "---\n",
-    "\n",
-    "### Q17. What are some use cases of Logistic Regression?  \n",
-    "- Disease prediction (e.g., diabetes detection)\n",
+    "## Q17. Use Cases of Logistic Regression\n",
     "- Spam detection\n",
-    "- Customer churn prediction\n",
+    "- Medical diagnosis (e.g., cancer detection)\n",
+    "- Credit scoring\n",
     "\n",
-    "---\n",
+    "## Q18. Difference between Softmax Regression and Logistic Regression\n",
+    "- **Logistic Regression**: Used for binary classification.\n",
+    "- **Softmax Regression**: Used for multiclass classification.\n",
     "\n",
-    "### Q18. What is the difference between Softmax Regression and Logistic Regression?  \n",
-    "- **Logistic Regression**: Binary classification.\n",
-    "- **Softmax Regression**: Multiclass classification.\n",
+    "## Q19. One-vs-Rest (OvR) vs Softmax for Multiclass Classification\n",
+    "- **OvR**: Suitable for unbalanced data.\n",
+    "- **Softmax**: Preferred for balanced datasets.\n",
     "\n",
-    "---\n",
-    "\n",
-    "### Q19. How do we choose between One-vs-Rest (OvR) and Softmax for multiclass classification?  \n",
-    "- **OvR**: When classes are imbalanced.\n",
-    "- **Softmax**: When all classes are equally important.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Q20. How do we interpret coefficients in Logistic Regression?  \n",
-    "Each coefficient represents the **log-odds** change per unit change in the predictor variable. For probability interpretation:\n",
-    "\n",
-    "\\[ e^{\\beta_i} \\] gives the odds ratio.\n",
-    "\n",
-    "Example: If \\( \\beta_1 = 0.5 \\), then \\( e^{0.5} \\approx 1.65 \\), meaning a unit increase in \\( X_1 \\) increases the odds of the event happening by **1.65 times**.\n"
+    "## Q20. Interpreting Coefficients in Logistic Regression\n",
+    "- **Positive coefficient**: Increases probability of class 1.\n",
+    "- **Negative coefficient**: Decreases probability of class 1.\n",
+    "- **Magnitude**: Larger values have a stronger impact.\n"
    ]
   },
   {
