Ensemble Techniques assignment

--- a/Ensemble-Techniques/Ensemble_Techniques.ipynb
+++ b/Ensemble-Techniques/Ensemble_Techniques.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -196,24 +196,24 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.datasets import make_classification\n",
     "\n",
-    "# Generate sample data\n",
+    "# Generating sample data\n",
     "X, y = make_classification(n_samples=1000, n_features=20, random_state=42)\n",
     "\n",
-    "# Split data\n",
+    "# Spliting data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train Bagging Classifier (Use 'estimator' instead of 'base_estimator')\n",
+    "# Training Bagging Classifier\n",
     "bagging_clf = BaggingClassifier(estimator=DecisionTreeClassifier(), n_estimators=50, random_state=42)\n",
     "bagging_clf.fit(X_train, y_train)\n",
     "\n",
-    "# Predict and print accuracy\n",
+    "# Predicting and printing accuracy\n",
     "y_pred = bagging_clf.predict(X_test)\n",
     "print(\"Bagging Classifier Accuracy:\", accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -236,24 +236,24 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.datasets import make_regression\n",
     "\n",
-    "# Generate sample data\n",
+    "# Generating sample data\n",
     "X, y = make_regression(n_samples=1000, n_features=10, noise=0.1, random_state=42)\n",
     "\n",
-    "# Split data\n",
+    "# Spliting data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train Bagging Regressor\n",
+    "# Training Bagging Regressor\n",
     "bagging_reg = BaggingRegressor(estimator=DecisionTreeRegressor(), n_estimators=50, random_state=42)\n",
     "bagging_reg.fit(X_train, y_train)\n",
     "\n",
-    "# Predict and evaluate MSE\n",
+    "# Predicting and evaluating MSE\n",
     "y_pred = bagging_reg.predict(X_test)\n",
     "print(\"Mean Squared Error:\", mean_squared_error(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -310,10 +310,10 @@
     "data = load_breast_cancer()\n",
     "X, y = data.data, data.target\n",
     "\n",
-    "# Split data\n",
+    "# Spliting data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train Random Forest Classifier\n",
+    "# Training Random Forest Classifier\n",
     "rf_clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf_clf.fit(X_train, y_train)\n",
     "\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -348,10 +348,10 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.datasets import make_regression\n",
     "\n",
-    "# Generate sample data\n",
+    "# Generating sample data\n",
     "X, y = make_regression(n_samples=1000, n_features=10, noise=0.1, random_state=42)\n",
     "\n",
-    "# Split data\n",
+    "# Spliting data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Train Decision Tree Regressor\n",
@@ -359,7 +359,7 @@
     "dt_reg.fit(X_train, y_train)\n",
     "y_pred_dt = dt_reg.predict(X_test)\n",
     "\n",
-    "# Train Random Forest Regressor\n",
+    "# Training Random Forest Regressor\n",
     "rf_reg = RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "rf_reg.fit(X_train, y_train)\n",
     "y_pred_rf = rf_reg.predict(X_test)\n",
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -397,10 +397,10 @@
     "data = load_breast_cancer()\n",
     "X, y = data.data, data.target\n",
     "\n",
-    "# Split data\n",
+    "# Spliting data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train Random Forest Classifier with OOB score enabled\n",
+    "# Training Random Forest Classifier with OOB score enabled\n",
     "rf_clf = RandomForestClassifier(n_estimators=100, oob_score=True, random_state=42)\n",
     "rf_clf.fit(X_train, y_train)\n",
     "\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -433,17 +433,17 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.datasets import make_classification\n",
     "\n",
-    "# Generate sample data\n",
+    "# Generating sample data\n",
     "X, y = make_classification(n_samples=1000, n_features=20, random_state=42)\n",
     "\n",
-    "# Split data\n",
+    "# Spliting data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train Bagging Classifier with SVM as base estimator\n",
+    "# Training Bagging Classifier with SVM as base estimator\n",
     "bagging_svm = BaggingClassifier(estimator=SVC(), n_estimators=50, random_state=42)\n",
     "bagging_svm.fit(X_train, y_train)\n",
     "\n",
-    "# Predict and print accuracy\n",
+    "# Predicting and printing accuracy\n",
     "y_pred = bagging_svm.predict(X_test)\n",
     "print(\"Bagging SVM Classifier Accuracy:\", accuracy_score(y_test, y_pred))"
    ]
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "# Train Bagging Classifier with Logistic Regression\n",
+    "# Training Bagging Classifier with Logistic Regression\n",
     "bagging_lr = BaggingClassifier(estimator=LogisticRegression(), n_estimators=50, random_state=42)\n",
     "bagging_lr.fit(X_train, y_train)\n",
     "\n",
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
     "'''\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "# Train Random Forest Regressor\n",
+    "# Training Random Forest Regressor\n",
     "rf_reg = RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "rf_reg.fit(X_train, y_train)\n",
     "\n",
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -572,12 +572,12 @@
     "'''\n",
     "from sklearn.ensemble import BaggingClassifier\n",
     "\n",
-    "# Train Bagging Classifier\n",
+    "# Training Bagging Classifier\n",
     "bagging_clf = BaggingClassifier(estimator=DecisionTreeClassifier(), n_estimators=50, random_state=42)\n",
     "bagging_clf.fit(X_train, y_train)\n",
     "y_pred_bagging = bagging_clf.predict(X_test)\n",
     "\n",
-    "# Train Random Forest Classifier\n",
+    "# Training Random Forest Classifier\n",
     "rf_clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf_clf.fit(X_train, y_train)\n",
     "y_pred_rf = rf_clf.predict(X_test)\n",
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
     "'''\n",
     "import numpy as np\n",
     "\n",
-    "# Train Random Forest Classifier\n",
+    "# Training Random Forest Classifier\n",
     "rf_clf.fit(X_train, y_train)\n",
     "y_pred = rf_clf.predict(X_test)\n",
     "\n",
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
     "dt_clf.fit(X_train, y_train)\n",
     "y_pred_dt = dt_clf.predict(X_test)\n",
     "\n",
-    "# Train Bagging Classifier\n",
+    "# Training Bagging Classifier\n",
     "bagging_clf.fit(X_train, y_train)\n",
     "y_pred_bagging = bagging_clf.predict(X_test)\n",
     "\n",
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Train Random Forest Classifier\n",
+    "# Training Random Forest Classifier\n",
     "rf_clf.fit(X_train, y_train)\n",
     "y_pred = rf_clf.predict(X_test)\n",
     "\n",
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
     "'''\n",
     "Answer:-37\n",
     "'''\n",
-    "# Train Random Forest Classifier\n",
+    "# Training Random Forest Classifier\n",
     "rf_clf.fit(X_train, y_train)\n",
     "\n",
     "# Get feature importance\n",
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
     "'''\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "\n",
-    "# Train Bagging Classifier\n",
+    "# Training Bagging Classifier\n",
     "bagging_clf.fit(X_train, y_train)\n",
     "y_pred = bagging_clf.predict(X_test)\n",
     "\n",
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
     "'''\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "# Train Random Forest Classifier\n",
+    "# Training Random Forest Classifier\n",
     "rf_clf.fit(X_train, y_train)\n",
     "y_prob = rf_clf.predict_proba(X_test)[:, 1]\n",
     "\n",
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1027,7 @@
     "'''\n",
     "from sklearn.metrics import precision_recall_curve\n",
     "\n",
-    "# Train Random Forest Classifier\n",
+    "# Training Random Forest Classifier\n",
     "rf_clf.fit(X_train, y_train)\n",
     "y_prob = rf_clf.predict_proba(X_test)[:, 1]\n",
     "\n",
