--- a/Boosting/Boosting.ipynb
+++ b/Boosting/Boosting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Theoritical Questions"
+    "# Theoretical Questions"
    ]
   },
   {
